# rit

./: CMakeLists.txt  README.md
imgs/apps/: CMakeLists.txt
imgs/apps/awb_grayworld/: CMakeLists.txt
imgs/apps/bilateral_filter/: CMakeLists.txt
imgs/apps/blackbody/: CMakeLists.txt  blackbody_radiance.cpp
imgs/apps/blackbody_fit/: CMakeLists.txt  blackbody_fit.cpp
imgs/apps/blackbody_temperature/: CMakeLists.txt  blackbody_temperature.cpp
imgs/apps/character_recognition/: CMakeLists.txt  character_recognition.cpp
imgs/apps/demosaic_GBTF/: CMakeLists.txt  demosaic_GBTF.cpp
imgs/apps/demosaic_bilinear/: CMakeLists.txt  demosaic_bilinear.cpp
imgs/apps/demosaic_laroche_and_prescott/: CMakeLists.txt  demosaic_laroche_and_prescott.cpp
imgs/apps/display/: CMakeLists.txt
imgs/apps/examples/: CMakeLists.txt
imgs/apps/fast_corners/: CMakeLists.txt  fast_corners.cpp
imgs/apps/gamma_correct/: CMakeLists.txt
imgs/apps/harris_corners/: CMakeLists.txt  harris_corners.cpp
imgs/apps/histogram_enhance/: CMakeLists.txt
imgs/apps/key_encrypt/: key_encrypt.cpp
imgs/apps/plot_histogram/: CMakeLists.txt  plot_histogram.cpp
imgs/apps/quantize/: CMakeLists.txt
imgs/apps/seam_carving/: CMakeLists.txt  seam_carving.cpp
imgs/apps/sort/: CMakeLists.txt  sort.cpp
imgs/apps/spatial_filter/: CMakeLists.txt
imgs/apps/spectrum_to_patch/: CMakeLists.txt  spectrum_to_patch.cpp
imgs/apps/threshold/: CMakeLists.txt
imgs/apps/transform_gcp/: CMakeLists.txt
imgs/apps/transform_q2q/: CMakeLists.txt  transform_q2q.cpp
imgs/apps/transform_rst/: CMakeLists.txt  (+1 more)
(+96 files in other folders)
