add_subdirectory(awb_grayworld)
add_subdirectory(bilateral_filter)
add_subdirectory(blackbody)
add_subdirectory(blackbody_fit)
add_subdirectory(blackbody_temperature)
add_subdirectory(character_recognition)
add_subdirectory(demosaic_bilinear)
add_subdirectory(demosaic_GBTF)
add_subdirectory(demosaic_laroche_and_prescott)
add_subdirectory(display)
add_subdirectory(examples)
add_subdirectory(fast_corners)
add_subdirectory(gamma_correct)
add_subdirectory(harris_corners)
add_subdirectory(histogram_enhance)
add_subdirectory(interpolate)
add_subdirectory(key_encrypt)
add_subdirectory(plot_histogram)
add_subdirectory(quantize)
add_subdirectory(seam_carving)
add_subdirectory(sort)
add_subdirectory(spatial_filter)
add_subdirectory(spectrum_to_patch)
add_subdirectory(threshold)
add_subdirectory(transform_gcp)
add_subdirectory(transform_q2q)
add_subdirectory(transform_rst)
add_subdirectory(video_magnification)
add_subdirectory(watermarking)
